Refactored the GUI class and divided it into multiple